    - PlotGroups now have their own hovertext when viewed in the /towny map.
    - Fix empty plotgroups not being deleted.  
    - Rewrite of the SQL saving/loading for plotgroups is done as well.
      - Fixes delete code which would never work.
      - Removes a redundant SQLSource method loadJail(Jail).
    - Properly PlotGroup.setResident(Resident) where it was not.
  - New Command: /plot group delete
    - Deletes a plot group entirely, requested in #5050.
  - New Command: /town plotgrouplist (townname) (page)
    - Lists a town's plotgroups with forsale and price indicated.
    - Closes #4431. 
  - New Permission Node: towny.command.plot.group.delete
    - Child node of towny.command.plot.group.*
    - Not needed to be added to townyperms.yml.
  - New Permission Node: towny.command.town.plotgrouplist
      - Child node of towny.command.town.*
      - Not needed to be added to townyperms.yml.
0.97.0.12:
  - Fix placeholders starting with %townyadvanced_player_ not working. 
  - Version checker, courtesy of Warriorrrr with PR #5016.
    - Automatically checks for updates on startup, and notifies players with the update notifications permission node when logging in (if enabled).
    - Servers can choose to be notified of Release versions.
    - If a server is using a pre-release version, and they have the checker enabled, they will be notified of new pre-releases (ignoring the release-versions-only option.)
    - Presents a download link.
  - New permission node: towny.admin.updatealerts
    - Child node of towny.admin.
  - New config node: plugin.update_notifications.alerts
    - Default: true
    - If enabled, players with the towny.admin.updatealerts permission will receive an update notification upon logging in.
  - New config node: plugin.update_notifications.major_only
    - Default: true
    - If enabled, only full releases will trigger notifications if you are running a full release, unless you're using a pre-release version.